archive CLI.